fix: fixed navbar and login invisible padding.

--- a/multi-stock-sync/src/components/Navbar/Navbar.css
+++ b/multi-stock-sync/src/components/Navbar/Navbar.css
@@ -50,9 +50,6 @@
     color: #666;
 }
 
-body {
-    padding-top: 4rem;
-}
 
 .settings-dropdown {
     position: relative;
